- (Mar 17 2009) Simon Josefsson:

  Added a Libtool -export-symbols-regex flag to reduce the number of
  exported symbols in shared libraries.  Reported by Mikhail Gusarov.

- (Mar 16 2009) Daniel Stenberg:

  I renamed a few man pages to match the exact name of the functions they
  describe. I also added template versions for the 13 functions that
  previously lacked man pages. While these don't contain any docs just yet, it
  will now be easier to add the info as the foundation is there!

- (Mar 15 2009) Daniel Stenberg:

  * libssh2_channel_read_ex() was simplified and enhanced. It now adjusts the
    window less frequent and uses much larger window that now allows MUCH
    faster transfers.

  * SCP send/recv now allow file names with whitespaces etc, thanks to a patch
    by Heiner Steven

- (Mar 13 2009) Daniel Stenberg: Cleanups, that do seem to have boosted SFTP
  download performance up to 300% in some tests:

  * cut off "_ex" from several internal function names

  * corrected some log outputs

  * simplified libssh2_channel_read_ex() and made it much faster in the process

  * cut out {{{ and }}} comments that were incorrect anyway

  * fixed sftp_packet_ask() to return the correct packet by using memcmp() and
    not strncmp()

  * fixed mkdir()'s wait for packet to use the correct request_id - it
    semi-worked previously because strncmp() in sftp_packet_ask() made it
    match far too easily.

  * took away the polling functionality from sftp_packet_ask() since it wasn't
    used

- (Mar 7 2009) Olivier Hervieu pointed out a flaw in the
  libssh2_channel_x11_req_ex() function that made it produce a crappy random
  chunk of data. Peter Stuge improved the fix to not do out-of-boundary
  writes. I (Daniel Stenberg) replaced the snprintf() with a plain sprintf()
  since the size argument wasn't adding anything anyway.

- (Feb 23 2009) Added libssh2_version()

- (Feb 20 2009) libssh2_channel_direct_tcpip_ex() bug #1902169 fixed, which